SF-Perkin/force-app/main/default/objects/Opportunity/fields/Key_Competitor_1__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitor_1__c</fullName>
    <inlineHelpText>Please choose Key Competitor from Picklist</inlineHelpText>
    <label>Key Competitor 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abbott</fullName>
            </value>
            <value>
                <fullName>ABI</fullName>
            </value>
            <value>
                <fullName>ABX</fullName>
            </value>
            <value>
                <fullName>Agilent</fullName>
            </value>
            <value>
                <fullName>Autobio</fullName>
            </value>
            <value>
                <fullName>Beckman</fullName>
            </value>
            <value>
                <fullName>Bio-Rad</fullName>
            </value>
            <value>
                <fullName>Biosino</fullName>
            </value>
            <value>
                <fullName>Bruker</fullName>
            </value>
            <value>
                <fullName>Buhler</fullName>
            </value>
            <value>
                <fullName>CHIVD</fullName>
            </value>
            <value>
                <fullName>Da’an</fullName>
            </value>
            <value>
                <fullName>Dinamica Generale</fullName>
            </value>
            <value>
                <fullName>Dionex</fullName>
            </value>
            <value>
                <fullName>Fenghua</fullName>
            </value>
            <value>
                <fullName>Fudan Zhangjiang</fullName>
            </value>
            <value>
                <fullName>Golden Bridge</fullName>
            </value>
            <value>
                <fullName>Hitachi</fullName>
            </value>
            <value>
                <fullName>Horiba</fullName>
            </value>
            <value>
                <fullName>Industrial Gas Suppliers</fullName>
            </value>
            <value>
                <fullName>ISR</fullName>
            </value>
            <value>
                <fullName>Jasco</fullName>
            </value>
            <value>
                <fullName>Jena</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>KHB</fullName>
            </value>
            <value>
                <fullName>Labsystems</fullName>
            </value>
            <value>
                <fullName>Leadman</fullName>
            </value>
            <value>
                <fullName>LECO</fullName>
            </value>
            <value>
                <fullName>Leeman</fullName>
            </value>
            <value>
                <fullName>Metrohm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>