SF-Perkin/force-app/main/default/objects/Opportunity/fields/Missing_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Missing_Paperwork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Paperwork</label>
    <type>Checkbox</type>
</CustomField>