SF-Perkin/force-app/main/default/objects/Opportunity/fields/Opportunity_Team__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team__c</fullName>
    <label>Opportunity Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adam Barlow</fullName>
            </value>
            <value>
                <fullName>Adam Pfeiffer</fullName>
            </value>
            <value>
                <fullName>Allison Cacciatore</fullName>
            </value>
            <value>
                <fullName>Ally Moore</fullName>
            </value>
            <value>
                <fullName>Anshul Mangal</fullName>
            </value>
            <value>
                <fullName>Anthony Wickline</fullName>
            </value>
            <value>
                <fullName>Brian Cooper</fullName>
            </value>
            <value>
                <fullName>Brian Maschino</fullName>
            </value>
            <value>
                <fullName>Brian Salbilla</fullName>
            </value>
            <value>
                <fullName>Christian Hermanas</fullName>
            </value>
            <value>
                <fullName>Cory Proctor</fullName>
            </value>
            <value>
                <fullName>Danny Foody</fullName>
            </value>
            <value>
                <fullName>Ellen Venezia</fullName>
            </value>
            <value>
                <fullName>Evan Bryant</fullName>
            </value>
            <value>
                <fullName>George Skillin</fullName>
            </value>
            <value>
                <fullName>Greg Gara</fullName>
            </value>
            <value>
                <fullName>Jacob Greenwood</fullName>
            </value>
            <value>
                <fullName>Jenn Clark</fullName>
            </value>
            <value>
                <fullName>Jess Porter</fullName>
            </value>
            <value>
                <fullName>Jim Rice</fullName>
            </value>
            <value>
                <fullName>Jim Watson</fullName>
            </value>
            <value>
                <fullName>Joel Gates</fullName>
            </value>
            <value>
                <fullName>Joe Neroni</fullName>
            </value>
            <value>
                <fullName>Josh Hoops</fullName>
            </value>
            <value>
                <fullName>Julia Taicsich</fullName>
            </value>
            <value>
                <fullName>Kayla Stanley</fullName>
            </value>
            <value>
                <fullName>Morgan Labbree</fullName>
            </value>
            <value>
                <fullName>Nishit Jain</fullName>
            </value>
            <value>
                <fullName>Phil Massey</fullName>
            </value>
            <value>
                <fullName>Rich Tree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>