SF-Perkin/force-app/main/default/objects/Opportunity/fields/Opportunity_Teams__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Teams__c</fullName>
    <label>Opportunity Teams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_473_Relationship_Lead</valueSetName>
    </valueSet>
</CustomField>