SF-Perkin/force-app/main/default/objects/Opportunity/fields/PF_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>PF_Next_Step__c</fullName>
    <label>PF Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>