SF-Perkin/force-app/main/default/objects/Opportunity/fields/PF_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Opportunity_Type__c</fullName>
    <label>PF Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Site</fullName>
            </value>
            <value>
                <fullName>Existing Site/Project Extension</fullName>
            </value>
            <value>
                <fullName>Existing Site/New Project</fullName>
            </value>
            <value>
                <fullName>Service Expansion</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
                <isActive>false</isActive>
                <label>LOI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>