SF-Perkin/force-app/main/default/objects/Opportunity/fields/PKI_GBL_Competitor_Lost_To__c.field-meta.xml
<CustomField>
    <fullName>PKI_GBL_Competitor_Lost_To__c</fullName>
    <inlineHelpText>Please Select Winning Competitor from Picklist</inlineHelpText>
    <label>Competitor Lost To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>&quot;Home Grown/It System&quot;</fullName>
            </value>
            <value>
                <fullName>AATI</fullName>
            </value>
            <value>
                <fullName>ABB Bomem</fullName>
            </value>
            <value>
                <fullName>ABX</fullName>
            </value>
            <value>
                <fullName>Affymetrix Inc</fullName>
            </value>
            <value>
                <fullName>Agilent Technologies</fullName>
            </value>
            <value>
                <fullName>Ahura</fullName>
            </value>
            <value>
                <fullName>ALLtech Associates</fullName>
            </value>
            <value>
                <fullName>Alpha Innotech</fullName>
            </value>
            <value>
                <fullName>Amersham Biosiences</fullName>
            </value>
            <value>
                <fullName>Analytical Instrument Systems</fullName>
            </value>
            <value>
                <fullName>Analytical Lab Products</fullName>
            </value>
            <value>
                <fullName>Analytical Spectral Devices Inc</fullName>
            </value>
            <value>
                <fullName>Analytik Jena</fullName>
            </value>
            <value>
                <fullName>Andor Technology</fullName>
            </value>
            <value>
                <fullName>Anton Parr</fullName>
            </value>
            <value>
                <fullName>Applied Biosystems (ABI)</fullName>
            </value>
            <value>
                <fullName>Arun Technology</fullName>
            </value>
            <value>
                <fullName>ATI</fullName>
            </value>
            <value>
                <fullName>ATL - Accelerated Technologies Ltd</fullName>
            </value>
            <value>
                <fullName>ATS Scientific Inc.</fullName>
            </value>
            <value>
                <fullName>Aurora Instruments</fullName>
            </value>
            <value>
                <fullName>Autobio</fullName>
            </value>
            <value>
                <fullName>Axon Instruments</fullName>
            </value>
            <value>
                <fullName>Beckman Coulter</fullName>
            </value>
            <value>
                <fullName>Benchling</fullName>
            </value>
            <value>
                <fullName>Berthold Detection Systems</fullName>
            </value>
            <value>
                <fullName>Bio-Rad Laboratories</fullName>
            </value>
            <value>
                <fullName>Bioscan</fullName>
            </value>
            <value>
                <fullName>Bioscan- BioFLECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>