SF-Perkin/force-app/main/default/objects/Opportunity/fields/Sales_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Sales_Campaign__c</fullName>
    <label>Sales Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BD_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2400 GC Platform</fullName>
            </value>
            <value>
                <fullName>Advanced materials</fullName>
                <isActive>false</isActive>
                <label>Advanced materials</label>
            </value>
            <value>
                <fullName>Avio550 Korea</fullName>
                <isActive>false</isActive>
                <label>Avio550 Korea</label>
            </value>
            <value>
                <fullName>Battery</fullName>
                <isActive>false</isActive>
                <label>Battery</label>
            </value>
            <value>
                <fullName>Battery &amp; New Materials</fullName>
            </value>
            <value>
                <fullName>Brazil - Oils and Lubricants</fullName>
            </value>
            <value>
                <fullName>Brazil - Pharma and Polymers</fullName>
            </value>
            <value>
                <fullName>Brazil- Renewed energy Biofuels GH2</fullName>
            </value>
            <value>
                <fullName>Central - #GoldCard (GC2400/ LC300) prom</fullName>
            </value>
            <value>
                <fullName>Central - GC for Pharma</fullName>
            </value>
            <value>
                <fullName>Central - Global Key Accounts</fullName>
            </value>
            <value>
                <fullName>Channel Management</fullName>
                <isActive>false</isActive>
                <label>Channel Management</label>
            </value>
            <value>
                <fullName>Channel Partner Management</fullName>
            </value>
            <value>
                <fullName>Chrom Recovery Plan (exl. LCM)</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
                <isActive>false</isActive>
                <label>Distributors</label>
            </value>
            <value>
                <fullName>Elemental Speciation</fullName>
            </value>
            <value>
                <fullName>End Of Life campaigns - Chrom</fullName>
                <isActive>false</isActive>
                <label>End Of Life campaigns - Chrom</label>
            </value>
            <value>
                <fullName>End Of Life campaigns - Inorganic</fullName>
                <isActive>false</isActive>
                <label>End Of Life campaigns - Inorganic</label>
            </value>
            <value>
                <fullName>End Of Life campaigns - MatChar</fullName>
                <isActive>false</isActive>
                <label>End Of Life campaigns - MatChar</label>
            </value>
            <value>
                <fullName>Environmental Duplicate instruments</fullName>
                <isActive>false</isActive>
                <label>Environmental Duplicate instruments</label>
            </value>
            <value>
                <fullName>EOSL</fullName>
            </value>
            <value>
                <fullName>Gold Card</fullName>
                <isActive>false</isActive>
                <label>Gold Card</label>
            </value>
            <value>
                <fullName>High End Matchar</fullName>
            </value>
            <value>
                <fullName>Japan - Nuclear</fullName>
            </value>
            <value>
                <fullName>Key Accounts</fullName>
                <isActive>false</isActive>
                <label>Key Accounts</label>
            </value>
            <value>
                <fullName>Korea - Cosmetics</fullName>
            </value>
            <value>
                <fullName>Lambda750</fullName>
                <isActive>false</isActive>
                <label>Lambda750</label>
            </value>
            <value>
                <fullName>Mexico - Agribusiness and Advance Materials</fullName>
            </value>
            <value>
                <fullName>Mexico - Distributors Excellence Program</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>