SF-Perkin/force-app/main/default/objects/Opportunity/validationRules/Account_Is_Rejected_By_MDM.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Is_Rejected_By_MDM</fullName>
    <active>true</active>
    <description>Used when Account is Rejected by MDM</description>
    <errorConditionFormula>/* Existing V. Rule
AND(
   NOT($Permission.C_PERM_8020_Bypass_Opp_V_RULE) 
  ,NOT( ISBLANK( AccountId ) ) 
  , Account.MDM_Status__c =&#39;Rejected&#39; )

*/
AND( NOT( $Permission.C_PERM_2100_Bypass_Account_V_RULE ),
          NOT($Profile.Name = &quot;PROFILE: PKI Project Farma&quot;)
    ,OR (
          Account.MDM_Status__c=&#39;Rejected&#39;
         ,AND(
	       NOT($Permission.C_PERM_8020_Bypass_Opp_V_RULE)
	      ,fxRecordTypeDevName__c &lt;&gt; &#39;Informatics&#39;
              ,Account.fxSetMergeFlag__c=False
	      ,DATEVALUE(CreatedDate)&gt;=DATE(2022,04,28)/*Deployment Date*/ 
             )
        )
   )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>V.RULE_OPP_067:Please choose a different account. This account type can&#39;t be used with opportunities.</errorMessage>
</ValidationRule>