SF-Perkin/force-app/main/default/objects/Opportunity/validationRules/Restrict_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Owner_Change</fullName>
    <active>false</active>
    <description>We can only allow users to change owners to the same OBC tag. GCE team can adjust to other company if needed. TBD/Blank need to be done by GCE</description>
    <errorConditionFormula>AND(
  NOT( $Permission.C_PERM_8030_Bypass_OwnedByCompany_V_RULE )
,Owner.License_type__c !=&#39;Partner Community&#39;
 ,ISCHANGED(OwnerId)
 ,NOT(INCLUDES(Owner.fxUserExtraAttributes__c , &quot;7010-Dynamic OBC Tag&quot;))
 ,OR(
     NOT(CONTAINS(&#39;AES,LSDX&#39;, TEXT(Owned_by_Company__c))) 
     ,AND( CONTAINS(&#39;AES,LSDX&#39;, TEXT(Owned_by_Company__c) ) 
          ,AND( LEFT(OwnerId,3)=&#39;005&#39;
               ,TEXT(Owner.Owned_by_Company__c)!= TEXT(Owned_by_Company__c)
              )

          )
     )
  )</errorConditionFormula>
    <errorMessage>V.RULE_OPP_087: The New Owner does not have the same tag as the Opportunity, or, the Opportunity is TBD/Blank. As needed, please pick a different user, or ask GCE to perform special owner transfers</errorMessage>
</ValidationRule>