SF-Perkin/force-app/main/default/objects/Opportunity/validationRules/STAGE_Abandoned_default.validationRule-meta.xml
<ValidationRule>
    <fullName>STAGE_Abandoned_default</fullName>
    <active>true</active>
    <description>Stage validation rule</description>
    <errorConditionFormula>AND( 
     NOT($Permission.C_PERM_8020_Bypass_Opp_V_RULE)   
  , DateValue(CreatedDate) &gt;= $Setup.CSET_9900__c.OppCutoverDate__c     
  ,  fxRecordTypeName__c = &quot;PKI SPI Sales Process&quot; 
  , TEXT(StageName)=&#39;Abandoned&#39;
  , OR(
        AND( PRIORVALUE(StageNumber__c) &gt;=3
           , PRIORVALUE(StageNumber__c) &lt;=5
           )
      ) 
)</errorConditionFormula>
    <errorMessage>V.RULE_OPP_073: To abandon at stage 1 or 2, ensure the &quot;Closed Reason Detail&quot; is filled in. From stage 3 and after, you can only move to &quot;Closed Lost&quot; and will need to supply the &quot;Closed Reason Detail&quot;.</errorMessage>
</ValidationRule>