SF-Perkin/force-app/main/default/objects/Opportunity/listViews/ADMIN_Won_Opps_without_Orders.listView-meta.xml
<ListView>
    <fullName>ADMIN_Won_Opps_without_Orders</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>SAP_Order__c</columns>
    <columns>fxOrderNumber__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/15/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.PKI_Americas_SPI</value>
    </filters>
    <label>(ADMIN) Won Opps without Orders</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>