SF-Perkin/force-app/main/default/objects/Opportunity/listViews/All_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Owner__c</field>
        <operation>contains</operation>
        <value>Inarkar</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Abandoned,Closed Lost,Closed Won</value>
    </filters>
    <label>Ashish Opportunities</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>