SF-Perkin/force-app/main/default/objects/Opportunity/listViews/All_Opportunities_no_date.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_no_date</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Application__c</columns>
    <columns>Application_Market__c</columns>
    <columns>Application_Segment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Stage 5 - Negotiation,Stage 1 - Create/Plan,Stage 1 - Lead / Interaction,Stage 2 - Qualify,Stage 3 - Develop,Stage 4 - Proposal Submitted,Stage 4 - Prove</value>
    </filters>
    <label>All Opportunities (no date)</label>
</ListView>