SF-Perkin/force-app/main/default/objects/Opportunity/listViews/CFQ_Lost_deals_AM.listView-meta.xml
<ListView>
    <fullName>CFQ_Lost_deals_AM</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>greaterOrEqual</operation>
        <value>USD 25000</value>
    </filters>
    <filters>
        <field>Global_Region__c</field>
        <operation>equals</operation>
        <value>AMERICAS</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Instrument,Large Instrument,Instrument Upgrade</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_QUARTER</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Lost,Abandoned</value>
    </filters>
    <label>CFQ Lost deals AM</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>