SF-Perkin/force-app/main/default/objects/Opportunity/listViews/Closed_Won_Opportunities_from_Grow.listView-meta.xml
<ListView>
    <fullName>Closed_Won_Opportunities_from_Grow</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Current_Quote_Number__c</columns>
    <columns>Referral_Email__c</columns>
    <columns>GROW__c</columns>
    <columns>GROW_Employee_ID__c</columns>
    <columns>Revenue_Rec_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>fxRecordTypeName__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Stage 6 - Implement (Closed),Closed Won</value>
    </filters>
    <label>Closed Won Opportunities - from Grow</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>